Code quality: fixed instantiating Integer.