@@ -240,7 +240,7 @@ public final class ManualStartParametersPanel extends MessagePanel implements Va
     //
     if (cm.getBuildAttributeValue(buildID, BuildConfigAttribute.ENABLE_VERSION, BuildConfigAttribute.OPTION_UNCHECKED).equals(BuildConfigAttribute.OPTION_CHECKED)) {
       final Integer currentVersionCounter = cm.getActiveBuildAttributeValue(buildID, ActiveBuildAttribute.VERSION_COUNTER_SEQUENCE);
-      final byte counterIncrementMode = cm.getBuildAttributeValue(buildID, BuildConfigAttribute.VERSION_COUNTER_INCREMENT_MODE, new Integer(BuildConfigAttribute.VERSION_COUNTER_INCREMENT_MODE_MANUAL)).byteValue();
+      final byte counterIncrementMode = cm.getBuildAttributeValue(buildID, BuildConfigAttribute.VERSION_COUNTER_INCREMENT_MODE, Integer.valueOf(BuildConfigAttribute.VERSION_COUNTER_INCREMENT_MODE_MANUAL)).byteValue();
       setVersionTemplate(cm.getBuildAttributeValue(buildID, BuildConfigAttribute.VERSION_TEMPLATE, ""));
       setVersionCounterNote(currentVersionCounter, counterIncrementMode);
     }
